
2008-06-13 - Release Version: 0.1.0

  - Cleaned up code a bit
	- Removed debug print statements
	- Updated Firefox support version to 3.0.*
	- Updated license of the extension to the new BSD license

2008-06-07 - Release Version: 0.0.6.23

	- Bugfix - Moved jQuery to a namespace under FirePHPLib to avoid namespace conflicts with other extensions

2008-06-06 - Release Version: 0.0.6.22

	- Bugfix - FF2 - Only send FirePHP user-agent header when Firebug is enabled
	- Bugfix - FF3 - Only send FirePHP user-agent header when Firebug Net Panel is enabled
  - Added support for FirePHP::TABLE log style

2008-05-28 - Release Version: 0.0.6.20

  - Bugfix - FF3 - Call request processor on main page load
	- Bugfix - Display of POST parameters in Post tab of request inspector
	- Bugfix - Display of POST response in Response tab of request inspector
	- Bugfix - Escape all HTML chracters rendered in Server tab of request inspector

2008-05-15 - Release Version: 0.0.6.19

	- Bugfix - Expanding requests for Firebug 1.2

2008-05-15 - Release Version: 0.0.6.18

	- Added support for Firebug 1.2

2008-05-15 - Release Version: 0.0.6.17

	- Bugfix - Ensure custom log templates and stylesheets are added correctly at all times

2008-05-14 - Release Version: 0.0.6.16

  - Bugfix - Monitor page loading and trigger request processor for main page and iframes
  - Changed API of Request processor to receive URL and Data as method arguments
	- Bugfix - Display correct URL for console message groups

2008-05-09 - Release Version: 0.0.6.15
	
	- Updated default processor to render exception stacks without wrapping the filenames
	- Added updateKey to install.rdf
	- Updated browser version to support FF3
  - Removed component used to add to User-Agent request header as we can do this directly via httpChannel
  - Removed ?t=xxx from custom processor URL's

2008-04-16 - Release Version: 0.0.6.14
	
	- Bugfix - Re-initialize processor when console panel is not found