@@ -70,6 +70,8 @@ try {
   fb($e);
 }
 
+fb('Backtrace to here',FirePHP::TRACE);
+
 fb(array('2 SQL queries took 0.06 seconds',array(
    array('SQL Statement','Time','Result'),
    array('SELECT * FROM Foo','0.02',array('row1','row2')),
