@@ -1,4 +1,5 @@
 
+	- Added support for FirePHP::TRACE log style
 	- Changed license to New BSD License
 
 2008-06-06 - Release Version: 0.0.2
